# shomagick

./: .gitignore  CMakeLists.txt  Makefile  README.md  RobustMatcher.cpp  RobustMatcher.h  detector.h  flightsession.cpp  flightsession.h  graph.h  image.hpp  kdtree.cpp  keypointsmatcher.cpp  parser.cpp  reconstruct.cpp  shomagick.sln  shomagick.vcxproj  shomagick.vcxproj.filters  shomatcher.cpp  shomatcher.hpp  shotracking.cpp  shotracking.h  sift.h  stitch.cpp  transformations.h  unionfind.h
catchtests/: allClose_tests.cpp  camera_tests.cpp  catchtests.vcxproj  catchtests.vcxproj.filters  stdafx.cpp  triangulation_tests.cpp
include/: RobustMatcher.h  bootstrap.h  bundle.h  camera.h  camera.inl  flightsession.h  image.hpp  kdtree.h  reconstructabilityscores.h  reconstruction.h  reconstructor.h  sensordata.h  shomatcher.hpp  shot.h  shotracking.h  shotracksgraph.h  unionfind.h
src/: CMakeLists.txt  HahogFeatureDetector.cpp  HahogFeatureDetector.h  MVSInterface.h  Makefile  OpenMVSExporter.h  RobustMatcher.cpp  RobustMatcher.h  ShoTracksGraph.cpp  ShomagickConfig.h.in  allclose.cpp  allclose.h  bootstrap.h  bundle.h  camera.cpp  camera.h  camera.inl  csv.h  cudaSiftFeatureDetector.cpp  cudaSiftFeatureDetector.h  cudaSurfFeatureDetector.cpp  cudaSurfFeatureDetector.hpp  cudamatcher.cpp  cudamatcher.hpp  cudasift_feature_detector.cpp  cudasurf.cpp  cudasurf.hpp  cudasurf_feature_detector.cpp  cudasurf_feature_detector.hpp  detector.h  flightsession.cpp  flightsession.h  graph.h  hahogfeaturedetector.cpp  hahogfeaturedetector.h  harv.csv  image.cpp  image.hpp  kdtree.cpp  kdtree.h  (+29 more)
src/bundle/: bundle_adjuster.h
src/bundle/src/: absolute_motion_terms.h  bundle_adjuster.cc  projection_errors.h
src/cmake/: ShomagickConfig.cmake.in
src/cmake/Modules/: FindSuiteSparse.cmake
tests/: allclose_tests.cpp  bundleadjuster_tests.cpp  camera_tests.cpp  multiview_tests.cpp  random_generators.cpp  tests.vcxproj  tests.vcxproj.filters  time_measurement.cpp  time_measurement.hpp  transformation_tests.cpp  triangulation_tests.cpp  two_view_reconstruction_test.cpp  utilities.cpp  utilities.h
